fixalign and various styles

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -11,13 +11,20 @@
         flex-direction: row;
         justify-content: center;
         margin: 5rem 5rem;
+        padding: 0 1rem;
         align-items: center;
         gap: 2rem;
     
         @include tablet {
             justify-content:start;
         }
+        &__arrow {
+            width: 150px;
 
+            @include tablet {
+                width: auto;
+            }
+        }
         &__title {
             font-size: 3rem;
             color: $dark-text;
@@ -41,20 +48,27 @@
     }
 
     &__content {
-        padding: 0 2rem;
+        padding: 0 0.5rem;
+
+        @include tablet {
+            padding: 0 2rem;
+        }
 
         &__text {
             display: flex;
             background-color: $secondary-color;
             border-radius: 150px 150px 0 0;
-            padding: 4rem;
+            padding: 5rem 1.5rem;
             line-height: 1.8rem;
             color: $dark-text;
-            width: 70%;
+            width: 80%;
             margin: auto;
             font-size: 1.5rem;
+            text-align: center;
 
             @include tablet  {
+                padding: 4rem;
+                text-align: start;
                 position: absolute;
                 bottom: auto;
                 right: 0;
